--- a/about us/aboutmq.css
+++ b/about us/aboutmq.css
@@ -26,6 +26,7 @@
         left: -100%;
         width: 100%;
         transition: 0.7s ease-in-out;
+        height:50vh;
     }
     .nav-links.active{
         left: 0;
