--- a/media-queries.css
+++ b/media-queries.css
@@ -18,6 +18,7 @@
         left: -100%;
         width: 100%;
         transition: 0.7s ease-in-out;
+        height:300px
     }
     .nav-links.active{
         left: 0;
