--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ ul{
 
 /* Footer section */
 .footer-section-main{
-    background-color: #d1ff7d;
+    background-color: #d4faa2;
     background-size: cover;
     max-width: 100%;
 }
