--- a/product/style.css
+++ b/product/style.css
@@ -232,7 +232,7 @@ ul{
 
 /* Footer section */
 .footer-section-main{
-    background-color: #d1ff7d;
+    background-color: #d4faa2;
     background-size: cover;
     max-width: 100%;
 }
