--- a/about us/style.css
+++ b/about us/style.css
@@ -95,7 +95,7 @@ ul{
     
     margin: 100px;
     padding: 50px;
-    background-color: #e8ffc1 ;
+    background-color: #fcfcde ;
     border-radius: 30px;
     border: 2px solid black;
 }
